* Added createonly parameter to action=edit
* Replaced $wgAPIUCUserPrefixMinLength by the more generic $wgAPIMaxDBRows
* (bug 11719) Remove trailing blanks in YAML output.
* (bug 13541) Added siprop=specialpagealiases to meta=siteinfo
* Added fallback8bitEncoding field to meta=siteinfo&siprop=general output
* (bug 13544) Added prop=revid to action=parse

=== Languages updated in 1.13 ===

* Afrikaans (af)
* Gheg Albanian (aln)
* Amharic (am)
* Aragonese (an)
* Arabic (ar)
* Asturian (ast)
* Kotava (avk)
* Samogitian (bat-smg)
* Bulgarian (bg)
* Catalan (ca)
* Crimean Turkish (Cyrillic) (crh-cyrl)
* Crimean Turkish (Latin) (crh-latn)
* Czech (cs)
* Welsh (cy)
* Danish (da)
* Lower Sorbian (dsb)
* Middle Dutch (dum) (removed)
* Greek (el)
* Esperanto (eo)
* Spanish (es)
* Estonian (et)
* Extremaduran (ext)
* Finnish (fi)
* Faroese (fo)
* French (fr)
* Franco-Provençal (frp)
* Friulian (fur)
* Irish (ga)
* Gan (gan)
* Galician (gl)
* Croatian (hr)
* Upper Sorbian (hsb)
* Hungarian (hu)
* Indonesian (id)
* Eastern Canadian (Unified Canadian Aboriginal Syllabics) (ike-cans)
* Icelandic (is)
* Italian (it)
* Japanese (ja)
* Georgian (ka)
* Kalaallisut (kl)
* Khmer (km)
* Latin (la)
* Luxembourgish (lb)
* Limburgish (li)
* Lao (lo)
* Lithuanian (lt)
* Malayalam (ml)
* Moldavian (mo)
* Marathi (mr)
* Low German (nds)
* Dutch (nl)
* Norwegian Nynorsk (nn)
* Norwegian (bokmål)‬ (no)
* Old Norse (non) (removed)
* Polish (pl)
* Pashto (ps)
* Portuguese (pt)
* Russian (ru)
* Yakut (sah)
* Sassaresu (sdc)
* Slovak (sk)
* Somali (so)
* Albanian (sq)
* Sranan Tongo (srn)
* Seeltersk (stq)
* Swedish (sv)
* Tamil (ta)
* Telugu (te)
* Tajik (tg)
* Thai (th)
* Turkish (tr)
* Tuvinian (tyv)
* Venda (ve)
* Vietnamese (vi)
* Volapük (vo)
* Wolof (wo)
* Mingrelian (xmf)
* Yiddish (yi)
* Cantonese (yue)
* Old Chinese / Late Time Chinese (zh-classical)
* Chinese (Simplified) (zh-hans)
* Chinese (Traditional) (zh-hant)

== Compatibility ==
